# CombustionSimulator

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: config.h  engine.cpp  engine.h  glad.c  main.cpp  ui.cpp  ui.h
src/render/: renderer.cpp  renderer.h  window.cpp  window.h
src/simulation/: Propellant.h  engine.cpp  engine.h
